# fluxo_crew

./: app.py  crew.py  pyproject.toml  rag_loader.py  requirements.txt  wsgi.py
audio_agents/: avaliador.py  custom_tool_vendas.py  fluxo_audio.py  sales.py  talk_agent.py
config/: agents.yaml  tasks.yaml
tools/: abap_rules.json  abap_validator_tool.py  xml_formatter_tool.py
vendas/: vendas_ficticias.csv
