[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sap-crewai-hub"
version = "0.1.0"
description = "SAP CrewAI Hub - Multi-agent ABAP coding assistant"
authors = [
    { name = "Seu Nome", email = "seuemail@exemplo.com" }
]
dependencies = [
    "streamlit",
    "crewai",
    "weaviate-client",
    "llama-index",
    "python-dotenv",
    "openai"
]

[tool.streamlit]
serverAddress = "0.0.0.0"
serverPort = 8501
